[gd_scene load_steps=5 format=3 uid="uid://bd1po4tb1ecam"]

[ext_resource type="Script" path="res://simple_fx/nodes/fx/explosion_one/explosion_one.gd" id="1_iop1d"]
[ext_resource type="Texture2D" uid="uid://deffpfaipdi2l" path="res://raw_assets/test_sprites/fx/b1_1.png" id="2_7wylu"]
[ext_resource type="Texture2D" uid="uid://bx4uuny8v8qck" path="res://raw_assets/test_sprites/fx/b1_2.png" id="3_k71dd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_480tp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7wylu")
}, {
"duration": 1.0,
"texture": ExtResource("3_k71dd")
}],
"loop": true,
"name": &"explosion_one",
"speed": 15.0
}]

[node name="explosion_one" type="Node2D" node_paths=PackedStringArray("exp_timer", "anim")]
script = ExtResource("1_iop1d")
exp_timer = NodePath("exp_timer")
anim = NodePath("exp_one_anim")

[node name="exp_one_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_480tp")
animation = &"explosion_one"
autoplay = "explosion_one"
frame = 1
frame_progress = 0.21777

[node name="exp_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="exp_timer" to="." method="_on_exp_timer_timeout"]
